<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="org.sayem.musicalstructure.MainActivity">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/songs"
            style="@style/CategoryStyle"
            android:background="@color/songs"
            android:text="@string/songs"/>

        <Button
            android:id="@+id/artists"
            style="@style/CategoryStyle"
            android:background="@color/artists"
            android:text="@string/artist"/>

        <Button
            android:id="@+id/albums"
            style="@style/CategoryStyle"
            android:background="@color/albums"
            android:text="@string/albums"/>

        <Button
            android:id="@+id/playlist"
            style="@style/CategoryStyle"
            android:background="@color/playlist"
            android:text="@string/playlist"/>
    </LinearLayout>

</FrameLayout>
