<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.sayem.musicalstructure.PlaylistsActivity">

    <Button
        android:id="@+id/main"
        style="@style/CategoryStyle"
        android:background="@color/albums"
        android:text="@string/main"
        android:layout_alignParentBottom="true"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Playlist detail screen"
        android:textSize="20sp"
        android:textStyle="bold"
        android:paddingBottom="50dp"
        android:id="@+id/playlistScreenTitle"
        android:gravity="center_vertical|center_horizontal"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="List of playlist"
        android:textSize="18sp"
        android:textStyle="bold"
        android:paddingBottom="10dp"
        android:id="@+id/playlistTitle"
        android:layout_below="@+id/playlistScreenTitle"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/playlistScreenTitle"
        android:layout_alignEnd="@+id/playlistScreenTitle" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/playlist_one"
        android:id="@+id/playlistOne"
        android:layout_below="@+id/playlistTitle"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/playlist_two"
        android:id="@+id/playlistTwo"
        android:layout_below="@+id/playlistOne"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/playlist_three"
        android:id="@+id/playlistThree"
        android:layout_below="@+id/playlistTwo"
        android:layout_alignRight="@+id/playlistTwo"
        android:layout_alignEnd="@+id/playlistTwo" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/playlist_four"
        android:id="@+id/playlistFour"
        android:layout_below="@+id/playlistThree"
        android:layout_alignRight="@+id/playlistThree"
        android:layout_alignEnd="@+id/playlistThree" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/playlist_five"
        android:id="@+id/playlistFive"
        android:layout_below="@+id/playlistFour"
        android:layout_alignRight="@+id/playlistFour"
        android:layout_alignEnd="@+id/playlistFour" />

</RelativeLayout>
